syntax = "proto2";
package materializer_general;
import "common.proto";

service GeneralMaterializer {
  rpc ValidateOptions(Options) returns (Empty);
  rpc UpsertView(MaterializedView) returns (Empty);
}

message MaterializedView {
  required string view_id = 1;
  required Options options = 2;
  repeated common.RowDefinition rows = 3;
}

message Options {
  required string options = 1;
}

message Empty {}
